--- a/country_info.ipynb
+++ b/country_info.ipynb
@@ -31,8 +31,8 @@
     "url = \"https://ajayakv-rest-countries-v1.p.rapidapi.com/rest/v1/all\"\n",
     "\n",
     "headers = {\n",
-    "    'x-rapidapi-key': \"{api_key}\",\n",
-    "    'x-rapidapi-host': \"{host_key}\"\n",
+    "    'x-rapidapi-key': api_key,\n",
+    "    'x-rapidapi-host': host_key\n",
     "    }\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers)\n",
