writeup more changes

--- a/list_comp.ipynb
+++ b/list_comp.ipynb
@@ -551,6 +551,7 @@
     }
    ],
    "source": [
+    "# Get list of country names\n",
     "econ_list = list(econ_df.index.values)\n",
     "econ_list"
    ]
@@ -572,6 +573,7 @@
     }
    ],
    "source": [
+    "# list count\n",
     "len(econ_list)"
    ]
   },
@@ -950,6 +952,7 @@
     }
    ],
    "source": [
+    "# Get list of country names\n",
     "happy_list = list(happy_df.index.values)\n",
     "happy_list"
    ]
@@ -971,6 +974,7 @@
     }
    ],
    "source": [
+    "# list count\n",
     "len(happy_list)"
    ]
   },
@@ -1396,6 +1400,7 @@
     }
    ],
    "source": [
+    "# Get list of country names\n",
     "country_list = list(country_df.index.values)\n",
     "country_list"
    ]
@@ -1417,6 +1422,7 @@
     }
    ],
    "source": [
+    "# list count\n",
     "len(country_list)"
    ]
   },
@@ -1426,6 +1432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use list comprehension to match up country_name between the 3 lists\n",
     "lst3 = [value for value in econ_list if value in happy_list]"
    ]
   },
@@ -1614,6 +1621,7 @@
     }
    ],
    "source": [
+    "# use these country names\n",
     "lst4"
    ]
   },
@@ -1623,6 +1631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export the 3 dataframes with a loc on the created list\n",
     "country_df.loc[lst4,:].to_csv(\"Resources/country_140.csv\", index=True, header=True)"
    ]
   },
